# FFmpegLib

./: README.md  build.gradle
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  build.gradle
lib/src/androidTest/java/com/test/ffmpegtest/: ExampleInstrumentedTest.java
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: cmdutils.c  ffmpeg.c  ffmpeg_cmd.c  ffmpeg_opt.c
lib/src/main/java/com/module/ffmpeglib/base/: FFmpeg.java
lib/src/main/java/com/module/ffmpeglib/operators/: VideoOperator.java
lib/src/main/java/com/module/ffmpeglib/samples/: MainActivity.java
lib/src/main/java/com/module/ffmpeglib/utils/: CmdBuilder.java
lib/src/main/res/layout/: activity_main.xml
